unpackaged/main/default/objects/nbavs__Requested_Skill__c/nbavs__Requested_Skill__c.object-meta.xml
<CustomObject>
    <label>Requested Skill</label>
    <nameField>
        <displayFormat>RS-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requested Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>