unpackaged/main/default/objects/nbavs__Requested_Skill__c/fields/nbavs__Call_Reporting__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Reporting__c</fullName>
    <label>Call Reporting</label>
    <referenceTo>nbavs__CallReporting__c</referenceTo>
    <relationshipLabel>Requested Skills</relationshipLabel>
    <relationshipName>Requested_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>