unpackaged/main/default/objects/nbavs__Requested_Skill__c/fields/nbavs__Channel__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Channel__c</fullName>
    <defaultValue>&quot;From&quot;</defaultValue>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From</fullName>
                <default>true</default>
                <label>From</label>
            </value>
            <value>
                <fullName>To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>