unpackaged/main/default/objects/nbavs__Requested_Skill__c/fields/nbavs__Minimum_Requested_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Minimum_Requested_Proficiency__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum Requested Proficiency Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>