unpackaged/main/default/objects/nbavs__Requested_Skill__c/fields/nbavs__Minimum_Requested_Proficiency_Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Minimum_Requested_Proficiency_Name__c</fullName>
    <formula>CASE(nbavs__Minimum_Requested_Proficiency__c, 0, &#39;No knowledge&#39;, 1, &#39;Minimal&#39;, 10, &#39;Basic&#39;, 20, &#39;Novice&#39;, 40, &#39;Intermediate&#39;, 60, &#39;Advanced&#39;, 80, &#39;Expert&#39;, 100, &#39;Guru&#39;, &#39;Custom&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Requested Proficiency Label</label>
    <type>Text</type>
</CustomField>