unpackaged/main/default/objects/nbavs__Requested_Skill__c/fields/nbavs__Skill__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>nbavs__Skill__c</referenceTo>
    <relationshipLabel>Requested Skills</relationshipLabel>
    <relationshipName>Requested_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>